# ZTransfer

./: .gitignore  Cargo.toml  README.md
public/: index.html  script.js  style.css
src/: lib.rs  main.rs  structures.rs  transfer.rs  util.rs  websocket.rs
